--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,11 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.38.1",
+    "@clerk/themes": "^2.4.4",
+    "@splinetool/react-spline": "^4.1.0",
+    "@splinetool/runtime": "^1.10.39",
     "@tailwindcss/vite": "^4.1.11",
+    "daisyui": "^5.0.50",
     "lucide-react": "^0.536.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
