Prepare for deployment

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,20 +4,29 @@
   "type": "module",
   "main": "src/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon src/server.js",
+    "start": "node src/server.js",
+    "build": "prisma generate"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@clerk/backend": "^2.6.2",
     "@clerk/clerk-sdk-node": "^4.13.23",
     "@clerk/express": "^1.7.15",
     "@google/genai": "^1.12.0",
     "@google/generative-ai": "^0.24.1",
+    "@prisma/client": "^6.13.0",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10",
+    "prisma": "^6.13.0"
   }
 }
