--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@splinetool/runtime": "^1.10.39",
     "@tailwindcss/vite": "^4.1.11",
     "daisyui": "^5.0.50",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.536.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
