--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/server.js",
     "start": "node src/server.js",
-    "build": "prisma generate"
+    "build": "npm install && prisma generate",
+    "postinstall": "prisma generate"
   },
   "keywords": [],
   "author": "",
