--- a/backend/package.json
+++ b/backend/package.json
@@ -6,9 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/server.js",
-    "start": "node src/server.js",
-    "build": "npm install && prisma generate",
-    "postinstall": "prisma generate"
+    "start": "node src/server.js"
   },
   "keywords": [],
   "author": "",
